--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>BBC Bangla</title>
 </head>
 <body>
+    <header class="bg-red-700">
+        <div class="max-w-[1250px] mx-auto p-5 md:p-8">
+            <img class="invert brightness-0" src="logo.svg" alt="">
+        </div>
+    </header>
     <script src="script.js"></script>
 </body>
 </html>
