--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -11,12 +12,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>BBC Bangla</title>
 </head>
-<body>
+<body class="font-noto">
     <header class="bg-red-700">
-        <div class="max-w-[1250px] mx-auto p-5 md:p-8">
+        <div class="max-w-7xl mx-auto p-5 md:p-8">
             <img class="invert brightness-0" src="logo.svg" alt="">
         </div>
     </header>
+    <nav class="max-w-7xl mx-auto pl-5 md:pl-8">
+        <ul class="flex gap-10 text-lg">
+            <li>মূলপাতা</li>
+            <li>রাজনীতি</li>
+            <li>বিশ্ব</li>
+            <li>অর্থনীতি</li>
+            <li>স্বাস্থ্য</li>
+            <li>খেলা</li>
+            <li>প্রযুক্তি</li>
+            <li>বাংলাদেশ</li>
+            <li>ভারত</li>
+        </ul>
+    </nav>
     <script src="script.js"></script>
 </body>
 </html>
