dynamically added nav

--- a/index.html
+++ b/index.html
@@ -19,16 +19,8 @@
         </div>
     </header>
     <nav class="max-w-7xl mx-auto pl-5 md:pl-8">
-        <ul class="flex gap-10 text-lg">
-            <li>মূলপাতা</li>
-            <li>রাজনীতি</li>
-            <li>বিশ্ব</li>
-            <li>অর্থনীতি</li>
-            <li>স্বাস্থ্য</li>
-            <li>খেলা</li>
-            <li>প্রযুক্তি</li>
-            <li>বাংলাদেশ</li>
-            <li>ভারত</li>
+        <ul id="category-container" class="flex gap-10 text-lg">
+            
         </ul>
     </nav>
     <script src="script.js"></script>
