added news for all categories

--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
         </div>
     </header>
     <nav class="max-w-7xl mx-auto pl-5 md:pl-8">
-        <ul id="category-container" class="flex gap-10 text-lg">
-            
-        </ul>
+        <ul id="category-container" class="flex gap-10 text-lg"></ul>
     </nav>
+
+
+    <main class="max-w-7xl mx-auto">
+        <div id="news-container" class="grid grid-cols-4 gap-5">
+
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
