added news for all categories

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </nav>
 
 
-    <main class="max-w-7xl mx-auto">
-        <div id="news-container" class="grid grid-cols-4 gap-5">
+    <main class="max-w-7xl mx-auto px-5 mt-5">
+        <div id="news-container" class="grid grid-cols-2 md:grid-cols-4 gap-5">
 
         </div>
     </main>
