--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>BBC Bangla</title>
 </head>
 <body class="font-noto">
@@ -23,9 +24,10 @@
     </nav>
 
 
-    <main class="max-w-7xl mx-auto px-5 mt-5">
-        <div id="news-container" class="grid grid-cols-2 md:grid-cols-4 gap-5">
-
+    <main class="max-w-7xl mx-auto px-5 mt-5 grid grid-cols-4 gap-5">
+        <div id="news-container" class="grid grid-cols-2 md:grid-cols-3 gap-5 col-span-3"></div>
+        <div id="bookmark-container" class="col-span-1 border border-gray-300">
+            <h1 class="bg-red-700 text-center p-5 text-white font-bold text-xs md:text-lg rounded-tl rounded-tr">Bookmark</h1>
         </div>
     </main>
     <script src="script.js"></script>
