--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 
     <main class="max-w-7xl mx-auto px-5 mt-5 grid grid-cols-4 gap-5">
         <div id="news-container" class="grid grid-cols-2 md:grid-cols-3 gap-5 col-span-3"></div>
-        <div id="bookmark-container" class="col-span-1 border border-gray-300">
+        <div class="col-span-1 border border-gray-300">
             <h1 class="bg-red-700 text-center p-5 text-white font-bold text-xs md:text-lg rounded-tl rounded-tr">Bookmark</h1>
+            <div id="bookmark-container">
+
+            </div>
         </div>
     </main>
     <script src="script.js"></script>
