--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
         <div id="news-container" class="grid grid-cols-2 md:grid-cols-3 gap-5 col-span-3"></div>
         <div class="col-span-1 border border-gray-300">
             <h1 class="bg-red-700 text-center p-5 text-white font-bold text-xs md:text-lg rounded-tl rounded-tr">Bookmark</h1>
-            <div id="bookmark-container">
-                
-            </div>
+            <div id="bookmark-container"></div>
+            
         </div>
     </main>
     <script src="script.js"></script>
