--- a/index.html
+++ b/index.html
@@ -25,11 +25,24 @@
 
 
     <main class="max-w-7xl mx-auto px-5 mt-5 grid grid-cols-4 gap-5">
-        <div id="news-container" class="grid grid-cols-2 md:grid-cols-3 gap-5 col-span-3"></div>
+        <div id="news-container" class="grid grid-cols-1 md:grid-cols-3 gap-5 col-span-3"></div>
         <div class="col-span-1 border border-gray-300">
             <h1 class="bg-red-700 text-center p-5 text-white font-bold text-xs md:text-lg rounded-tl rounded-tr">Bookmark</h1>
             <div id="bookmark-container"></div>
             
+                <!-- Open the modal using ID.showModal() method -->
+<!-- <button class="btn" onclick="my_modal_2.showModal()">open modal</button> -->
+<dialog id="my_modal_2" class="modal">
+  <div class="modal-box" id="show-modal">
+    
+  </div>
+  <form method="dialog" class="modal-backdrop">
+    <button>close</button>
+  </form>
+</dialog>
+
+
+
         </div>
     </main>
     <script src="script.js"></script>
